--- a/src/app/menu-top/menu-top.component.html
+++ b/src/app/menu-top/menu-top.component.html
@@ -157,7 +157,7 @@
                 </li>
               </ul>
             </li> -->
-            <li class="mt-root">
+            <li class="mt-root hidden-sos">
               <div class="mt-root-item">
                 <div class="title title_font"><span class="title-text"><i class="fa fa-shopping-cart" aria-hidden="true"></i> &nbsp;  Bán chạy nhất</span></div>
               </div>
