--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -431,3 +431,21 @@
 	margin: 0;
 	padding: 0 0 0 80px;
 }
+
+.is-link{
+    color: #288ad6;
+    text-decoration: none;
+    font-weight: 700;
+    cursor: pointer !important;
+}
+
+.att-value > a{
+    cursor: auto;
+    
+}
+
+
+.att-value > a:hover{
+    color: #000;
+    
+}
