--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -170,7 +170,8 @@
                     <ng-container *ngFor="let item of product?.productAttributes">
                       <tr>
                         <td class="att-name"><strong>{{item.attributeName}}</strong></td>
-                        <td class="att-value"><a href="#">{{item.attributeValueName}}</a></td>
+                        <td class="att-value"><a [ngClass]="{'is-link' : item.attributeValueUrl != '' && item.attributeValueUrl != 'null'}" 
+                          href="{{GetUrlLink(item.attributeValueUrl)}}">{{item.attributeValueName}}</a></td>
                       </tr>
                     </ng-container>
                   </table>
@@ -319,90 +320,14 @@
           </div>
         </div>
       </div>
-      <!-- <aside class="right sidebar col-sm-3 col-xs-12">
-          <div class="block shop-by-side">
-            <div class="sidebar-bar-title">
-              <h3>Shop By</h3>
-            </div>
-            <div class="block-content">
-              <div class="layered-Category">
-                <div class="layered-content">
-                  <ul class="check-box-list">
-                    <li>
-                      <input type="checkbox" id="jtv1" name="jtvc">
-                      <label for="jtv1"> <span class="button"></span> Camera & Photo<span class="count">(12)</span> </label>
-                    </li>
-                    <li>
-                      <input type="checkbox" id="jtv2" name="jtvc">
-                      <label for="jtv2"> <span class="button"></span> Computers<span class="count">(18)</span> </label>
-                    </li>
-                    <li>
-                      <input type="checkbox" id="jtv3" name="jtvc">
-                      <label for="jtv3"> <span class="button"></span> Apple Store<span class="count">(15)</span> </label>
-                    </li>
-                    <li>
-                      <input type="checkbox" id="jtv4" name="jtvc">
-                      <label for="jtv4"> <span class="button"></span> Car Electronic<span class="count">(03)</span> </label>
-                    </li>
-                    <li>
-                      <input type="checkbox" id="jtv5" name="jtvc">
-                      <label for="jtv5"> <span class="button"></span> Accessories<span class="count">(04)</span> </label>
-                    </li>
-                    <li>
-                      <input type="checkbox" id="jtv7" name="jtvc">
-                      <label for="jtv7"> <span class="button"></span> Game & Video<span class="count">(07)</span> </label>
-                    </li>
-                    <li>
-                      <input type="checkbox" id="jtv8" name="jtvc">
-                      <label for="jtv8"> <span class="button"></span> Best selling<span class="count">(05)</span> </label>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="block special-product">
-            <div class="sidebar-bar-title">
-              <h3>Sản phẩm ưu đãi</h3>
-            </div>
-            <div class="block-content">
-              <ul *ngIf="productSale">
-                <ng-container *ngFor="let item of productSale?.data; let i = index">
-                  <li class="item" *ngIf="i < 3">
-                    <div class="products-block-left"> <a [routerLink]="['/chi-tiet']" [queryParams]="{slug: item?.productNameSlug}" title="Sample Product" class="product-image"><img [src]='urlImg + item.imageUrl' alt="Sample Product "></a></div>
-                    <div class="products-block-right">
-                      <p class="product-name"> <a [routerLink]="['/chi-tiet']" [queryParams]="{slug: item?.productNameSlug}">{{item.productName}}</a> </p>
-                      <span class="special-price price">{{product?.promotionPrice | currency: "VND"}}</span>
-                      <div class="rating">
-                        <ng-container *ngIf="item.rate >= 0">
-                          <i class="fa fa-star" *ngFor="let rate of counterRate(item.rate)"></i>
-                          <i class="fa fa-star-o" *ngFor="let rate of counterRate(5 - item.rate)"></i>
-                        </ng-container>
-                       </div>
-                    </div>
-                  </li>
-                </ng-container>
-              </ul>
-              <a class="link-all" [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 1}">Xem thêm</a> </div>
-          </div>
-          <div class="block popular-tags-area ">
-            <div class="sidebar-bar-title">
-              <h3>Popular Tags</h3>
-            </div>
-            <div class="tag">
-              <ul >
-                <li *ngFor="let item of product?.productTags"><a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{searchKey: item}">{{item}}</a></li>
-              </ul>
-            </div>
-          </div>
-        </aside> -->
+      
     </div>
   </div>
   <div class="container" *ngIf="displayToolbar_Top">
     <div class="pc_toolbar_top active">
       <div class="container">
         <div class="pro-info">
-          <div class="product-name">Vỏ Case KENOO ESPORT G362 - Pink</div>
+          <div class="product-name">{{product.productName}}</div>
           <div class="addcart-price">
             <div class="">
               Tổng chi phí
