--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -398,7 +398,7 @@
             </ul>
           </div>
         </div>
-        <div class="offer-banner div-to-hide-mobile"><img src="./../assets/images/offer-banner.jpg" alt="banner"></div>
+        <!-- <div class="offer-banner div-to-hide-mobile"><img src="./../assets/images/offer-banner.jpg" alt="banner"></div> -->
       </aside>
       <div class="category searchMobile hidden-pc" id="searchMobile">
         <div class="category__content">
