--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -54,9 +54,8 @@
                           </div>
                         </div>
                       </div>
-                      <div class="product__price"><span class="price__selling">{{item.promotionPrice | currency: "VND"
-                          }}</span>
-                        <span class="price__old">{{item.price | currency: "VND" }}</span>
+                      <div class="product__price"><span class="price__selling">{{item.promotionPrice | currency: "VND" }}</span>
+                        <span *ngIf="item.promotionPrice < item.price" class="price__old">{{item.price | currency: "VND" }}</span>
                       </div> <button type="button" (click)="addToShopingCard(item)" class="add-to-cart"><i
                           class="fa fa-shopping-cart"></i> &nbsp;GIỎ
                         HÀNG</button>
