--- a/src/app/product-recent/product-recent.component.html
+++ b/src/app/product-recent/product-recent.component.html
@@ -22,7 +22,7 @@
             </div>
           </div>
         </div>
-        <div class="product__price"><span class="price__selling">{{item.promotionPrice | currency: "VND" }}</span> <span
+        <div class="product__price"><span class="price__selling">{{item.promotionPrice | currency: "VND" }}</span> <span  *ngIf="item.promotionPrice < item.price" 
             class="price__old">{{item.price | currency: "VND":'symbol' }}</span></div> <button type="button" (click)="addToShopingCard(item)"
           class="add-to-cart"><i class="fa fa-shopping-cart"></i> &nbsp;GIỎ HÀNG</button>
       </div>
